[package]
name = "cursal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
colored = "2.0.4"
http = "0.2.9"
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
